<resources>
    <string name="app_name">Grapevine</string>
    <string name="node_offline">получателя нет в сети</string>
    <string name="message_rejected">узел отклонил сообщение</string>
    <string name="timeout">превышено время ожидания</string>
    <string name="invalid_response_received">получен неверный ответ</string>
    <string name="status_channel_name">Статус</string>
    <string name="status_channel_desc">Отображение статуса сервиса Grapevine</string>
    <string name="message_channel_name">Сообщения</string>
    <string name="message_channel_desc">Отображение входящих сообщений</string>
    <string name="grapevine_service">Сервис Grapevine</string>
    <string name="status_text">Bluetooth: %1$s\nWi-FI: %2$s\n\nОтправлено: %3$d Получено: %4$d</string>
    <string name="on">вкл.</string>
    <string name="off">выкл.</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="auto_login">Автоматический вход</string>
    <string name="create_profile">Создать профиль</string>
    <string name="invalid_name">Имя должно быть длиной от 4 до 35 и не содержать спецсимволов</string>
    <string name="password_too_short">Пароль слишком короткий</string>
    <string name="password_is_blank">Пароль не может быть пустым</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="profile_creation">Создание профиля</string>
    <string name="login_label">Вход в Grapevine</string>
    <string name="login_welcome">Здравствуйте, %1$s</string>
    <string name="password_prompt">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="chats">Чаты</string>
    <string name="people_around">Люди поблизости</string>
    <string name="global_chat">Общий чат</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="username">Имя пользователя</string>
    <string name="location_alert">Для обнаружения окружающих устройств необходимо включить местоположение</string>
    <string name="error_need_location_permission">Необходим доступ к местоположению</string>
    <string name="enable">Включить</string>
    <string name="close">Закрыть</string>
    <string name="stop">Остановить</string>
    <string name="no_people_around">Вы совсем один</string>
    <string name="chat_name">Название чата</string>
    <string name="you">Вы</string>
    <string name="last_message">Последнее сообщение</string>
    <string name="no_chats">Пока чатов нет</string>
    <string name="chats_hint">Вы можете создать диалог в разделе \"Люди поблизоcти\"</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="create_chat">Создание чата</string>
    <string name="message_prompt">Введите сообщение</string>
    <string name="message_text">Текст сообщения</string>
    <string name="timestamp_placeholder">00:00</string>
    <string name="file_name">Название файла</string>
    <string name="file_size_placeholder">2.2 МиБ</string>
    <string-array name="size_units">
        <item>Б</item>
        <item>КиБ</item>
        <item>МиБ</item>
        <item>ГиБ</item>
    </string-array>
    <string name="unknown">Неизвестно</string>
    <string name="chat_members">Участники чата</string>
    <string name="mark_as_read">Прочитано</string>
    <string name="reply">Ответить</string>
    <string name="chat_invitation_text">Вы были добавлены в чат</string>
    <string name="no_people_around_to_add">Поблизости никого нет</string>
    <string name="leave_chat">Покинуть чат</string>
    <string name="not_in_chat">Вы не состоите в этом чате</string>
    <string name="kicked_from_chat">Вы были искючены из чата</string>
    <string name="delete_chat">Удалить чат?</string>
    <string name="delete_chat_alert">Все сообщения будут безвозвратно удалены</string>
    <string name="search">Поиск</string>
    <string name="autologin_full">Автоматический вход</string>
    <string name="max_connections">Кол-во одновременных подключений</string>
    <string name="wipe_data">Стереть все данные</string>
    <string name="file_block_size">Размер блока при передаче файла, кБ</string>
    <string name="redeliver_interval">Интервал повторной отправки сообщений, с</string>
</resources>